appId: it.letscode.touge-dash
---
- tapOn:
    text: "Pozwalaj"
    optional: true
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: "Pozwalaj"
    optional: true
- tapOn:
    text: "Allow"
    optional: true
